# nkiri-tv

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: build-all.yml
src/: main.py
src/core/: config.py  constants.py  focus_manager.py  state.py  theme.py
src/services/: cache.py  nkiri.py
src/views/: content_detail.py  home.py  player.py  search.py  series_detail.py  splash.py
