[project]
name = "nkiri-tv"
version = "0.1.0"
description = "Lightweight client-side Android TV / mobile / desktop app for streaming movies and series from Nkiri."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.12.0",
    "flet==0.85.0",
    "flet-video==0.85.0",
    "httpx>=0.28.1",
]

[tool.flet]
org = "com.nkiritv"
product = "Nkiri TV"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "com.nkiritv.app"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true

[tool.flet.android.feature]
"android.software.leanback" = true
"android.hardware.touchscreen" = false

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
